Refactoring - moving files to separate projects.

--- a/Backend_Homework_Tests/Backend_Homework_Tests.csproj
+++ b/Backend_Homework_Tests/Backend_Homework_Tests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Backend_Homework\Backend_Homework.csproj" />
+    <ProjectReference Include="..\Backend_Homework.FileManager\Backend_Homework.FileManager.csproj" />
   </ItemGroup>
 
   <ItemGroup>
